# Trivia

./: .gitignore  package-lock.json  package.json  vite.config.ts
server/: CMakeLists.txt  main.cpp  pch.hpp  postgres.cpp  server.cpp  server.hpp
server/api/: api.hpp  category.cpp  category.hpp  last_modified.cpp  logout.cpp  question.cpp  question.hpp  session.cpp  session.hpp  user.cpp
server/env/: .env.public  config.h.in  load_env.cmake
server/parser/: a.out  main.cpp  parser.cpp  parser.hpp
server/questions/: celebrities  general  history  humanities  literature  movies  people  rated  science-technology  sports  video-games  world
server/request/: middleware.cpp  middleware.hpp  postgres.cpp  postgres.hpp  request.cpp  request.hpp  request_handler.hpp
src/: const.ts  index.tsx  usercontext.tsx
src/components/AdminPlaceholder/: adminplaceholder.tsx  index.tsx
src/components/ButtonWithAlt/: buttonwithalt.module.css  buttonwithalt.tsx  buttonwithaltprops.ts  index.tsx
src/components/Category/: category.module.css  category.tsx
src/components/FilterMenu/: filtermenu.module.css  filtermenu.tsx  filtermenuprops.ts  index.tsx
src/components/ListComponent/: index.tsx  listcomponent.module.css  listcomponent.tsx  listcomponentprops.ts
src/components/MenuComponent/: index.tsx  menucomponent.tsx  menucomponentprops.ts
src/components/Navbar/: navbar.module.css  navbar.tsx
src/components/WelcomeMessage/: index.tsx  welcomemessage.module.css  welcomemessage.tsx  welcomemessageprops.ts
src/routes/: index.module.css  index.tsx  login.module.css  login.tsx
src/routes/admin/: admin.module.css  admin.tsx
src/routes/admin/utils/: const.ts  endpoint_utils.ts
src/routes/login/: login.module.css  login.tsx
src/routes/utils/: userutils.ts
